docs/k8s-notebooks/manifests/ingress/example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
#  namespace: app1
  annotations:
    kubernetes.io/ingress.class: nginx  # ingress类，或者存在default ingressclass时不需要指定
#    kubernetes.io/tls-acme: "true" #Get Automatic HTTPS with Let's Encrypt and Kubernetes Ingress
#    cert-manager.io/issuer: gitlab-issuer
#    cert-manager.io/cluster-issuer: cluster-issuer
    nginx.ingress.kubernetes.io/affinity: cookie   # 启用会话保持
#    nginx.ingress.kubernetes.io/app-root: /web   #访问域名根时，默认跳转的服务
    nginx.ingress.kubernetes.io/proxy-buffer-size: 512k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "720"
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: 1024m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: 100M   # 请求包大小限制
#    nginx.ingress.kubernetes.io/ssl-redirect: "true"   # 强制跳转https
    nginx.ingress.kubernetes.io/use-regex: "true"    # 允许正则
    nginx.ingress.kubernetes.io/configuration-snippet: |     # nginx配置
      rewrite  ^/web1/(.*)  /web/$1 last;
#      proxy_set_header  X-Forwarded-Proto   https;
#      rewrite  ^/file(.*) /FileAPI2/v1/file$1 last;
#      rewrite  ^/sso/apis(.*) /apis/apis$1 last;
#      rewrite  /sso/bootstrap  /apis/bootstrap last;
#      rewrite  /ExportAPI/api/Export/(.*)  /api/export/$1 last;
#      rewrite  /ExportAPI/api/excelExport/(.*)  /api/excelExport/$1 last;
spec:
#  tls:   # https证书配置
#    - hosts:
#        - www.dachui.com
#      secretName: ingress-secret   # 证书secret
  ingressClassName: nginx
  rules:
  - host: www.dachui.com
    http:
      paths:
      - backend:
          service:
            name: web1-clusterip
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific   # 路径类型
      - backend:
          service:
            name: web1-clusterip
            port:
              number: 80
        path: /web
        pathType: ImplementationSpecific
